--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,47 +1,47 @@
 audit_header: false
-title: -- MARKET -- Real Estate Video Blog with -- CLIENT NAME --
-description: Our mission at -- CLIENT BRAND -- is to be your best resource for -- MARKET -- real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The -- CLIENT BRAND --, your professional -- MARKET -- Real Estate Agents.
+title: Real Estate Video Blog with David Thompson
+description: Our mission at Every Corner Realty is to be your best resource for -- MARKET -- real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. If you are looking to buy or sell a home, you can get all the information and the latest updates, tips, and tricks from The -- CLIENT BRAND --, your professional -- MARKET -- Real Estate Agents.
 show_custom_links: false
 custom_links:
   - title:
     url:
 
 client:
-  name:
+  name: David Thompson
   title:
   license_number:
   about_markdown: |
 
   market:
-  brand:
+  brand: Every Corner Realty
   brokerage:
-  address:
-  phone:
+  address: 5100 Lovers Lane, Portage, MI 49002
+  phone: 1-800-357-2138
   phone_type:
   phone2:
   phone2_type:
-  email:
-  url:
+  email: info@everycornerrealty.com
+  url: https://www.everycornerrealty.com
 
 CTAs:
   first_CTA_text: Home Valuation
-  first_CTA_URL: /homevalue/
+  first_CTA_URL: https://www.everycornerrealty.com/home-valuation/
   second_CTA_text: Home Search
-  second_CTA_URL: /homesearch/
+  second_CTA_URL: https://www.everycornerrealty.com/results-gallery/?OfficeMLS=k1669
 
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/004.jpg
     CTA_title: "What’s Your -- MARKET -- Home Worth?"
     CTA_text: "Are you thinking of selling your home or interested in learning about home prices in your neighborhood? We can help you."
     CTA_link_text: "Free Home Value Report"
-    CTA_url: /homevalue/
+    CTA_url: https://www.everycornerrealty.com/home-valuation/
 
 second_sidebar_CTA:
   - CTA_image_path2: /img/cta-images/005.jpg
     CTA_title2: "Looking for a -- MARKET -- Home?"
     CTA_text2: "Search the entire MLS for your -- MARKET -- home."
     CTA_link_text2: "Search the MLS"
-    CTA_url2: /homesearch/
+    CTA_url2: https://www.everycornerrealty.com/results-gallery/?OfficeMLS=k1669
 
 lender:
   show_section: false
@@ -57,7 +57,7 @@ lender:
 
 socials:
   review_sm_icons: false
-  facebook_url:
+  facebook_url: https://www.facebook.com/everycornerrealty
   linkedin_url:
   gplus_url:
   youtube_url:
@@ -87,8 +87,8 @@ images:
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
 site_colors:
-  brand_color: '#b40101'
-  theme_color: '#999'
+  brand_color: '#F25A29'
+  theme_color: '#231F20'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
