--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -59,12 +59,12 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/everycornerrealty
   linkedin_url:
-  gplus_url:
-  youtube_url:
-  twitter_url:
+  gplus_url: https://plus.google.com/107367586787370989902
+  youtube_url: https://www.youtube.com/channel/UCMngDV5-c3T02bUAjv3_mQQ
+  twitter_url: https://twitter.com/DThompsonECR
   instagram_url:
   pinterest_url:
-  zillow_url:
+  zillow_url: https://www.zillow.com/profile/DavidThompsonAgent/
   trulia_url:
   yelp_url:
   podcast_url:
