Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ client:
   title:
   license_number:
   about_markdown: |
-
+    Hello, my name is David Thompson. I started my real estate career over 28 years ago after serving in the Navy as a combat veteran in the United Nations Expeditionary Force in the Persian Gulf. From the first day I started selling real estate, I made servicing my clients my number one goal. I am currently ranked as one of the top producing real estate agents in the country. My success is a result of my dedication to helping people such as yourself reach your goals. I now have a dedicated and experienced team - Every Corner Realty. Let us help you into your next home.
   market:
   brand: Every Corner Realty
   brokerage:
