Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,7 +13,7 @@ client:
   about_markdown: |
     Every Corner Realty is a unique type of real estate company. We are locally and veteran owned. Our company belongs to a variety of national organizations that allow for national exposure and relocation but also allows you, our client, to work with a company that understands our local market and gives you the best of both worlds. We are different from other companies in many ways. We are a team of Realtors that work together to help you reach your goals. Typically, when you hire a real estate agent you hire one person. This one person handles everything from taking pictures, processing the listing, marketing, showing a home, providing feedback, communicating, negotiating, handling all the details involved in closing the transacting and etcetera. When you hire Every Corner Realty you hire a complete team of licensed Realtors that specialize in their specific area of expertise. This team concept allows you as our client to reach your goals, weather it is selling your home quickly and for top dollar, or having a Realtor that has the expertise to find that perfect home for you.
   market:
-  brand: Every Corner Realty
+  brand: 
   brokerage:
   address: 5100 Lovers Lane, Portage, MI 49002 <br> administrative office
   phone: 1-800-357-2138
