Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ client:
   market:
   brand: 
   brokerage:
-  address: 5100 Lovers Lane, Portage, MI 49002 <br> administrative office
+  address: 5100 Lovers Lane, Portage, MI 49002 <br> Administrative Office
   phone: 1-800-357-2138
   phone_type:
   phone2:
