--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -59,7 +59,7 @@ socials:
   review_sm_icons: false
   facebook_url: https://www.facebook.com/everycornerrealty
   linkedin_url:
-  gplus_url: https://plus.google.com/107367586787370989902
+  gplus_url: 
   youtube_url: https://www.youtube.com/channel/UCMngDV5-c3T02bUAjv3_mQQ
   twitter_url: https://twitter.com/DThompsonECR
   instagram_url:
